@@ -1,10 +1,10 @@
 #define RUBY_VERSION "2.1.4"
-#define RUBY_RELEASE_DATE "2014-10-22"
-#define RUBY_PATCHLEVEL 262
+#define RUBY_RELEASE_DATE "2014-10-26"
+#define RUBY_PATCHLEVEL 263
 
 #define RUBY_RELEASE_YEAR 2014
 #define RUBY_RELEASE_MONTH 10
-#define RUBY_RELEASE_DAY 22
+#define RUBY_RELEASE_DAY 26
 
 #include "ruby/version.h"
 
